# pidgin-chime

./: .gitignore  CONTRIBUTING.md  COPYING.LGPL  Makefile.am  README  README.md  TODO  attachments.c  autogen.sh  buddy.c  chat.c  chime-auth.desktop  chime-auth.py  chime-call-audio.c  chime-call-audio.h  chime-call-transport.c  chime-call.c  chime-call.h  chime-connection-private.h  chime-connection.c  chime-connection.h  chime-contact.c  chime-contact.h  chime-conversation.c  chime-conversation.h  chime-get-token.c  chime-juggernaut.c  chime-meeting.c  chime-meeting.h  chime-object.c  chime-object.h  chime-props.h  chime-room.c  chime-room.h  chime-stream-meeting.c  chime-websocket-connection.c  chime-websocket-connection.h  chime-websocket.c  chime.c  chime.h  (+22 more)
.copr/: Makefile
.github/: PULL_REQUEST_TEMPLATE.md
amznphoto-plugin/: Makefile.am  amznphoto_plugin.c
build-aux/: meson_post_install.py
certs/: Amazon.com_InfoSec_CA_G3.pem  Amazon.com_Internal_Root_Certificate_Authority.pem  Amazon_Root_CA_1.pem  Amazon_Root_CA_2.pem  Amazon_Root_CA_3.pem  Amazon_Root_CA_4.pem  SFS_Root_CA_G2.pem
chime/: chime-call-audio.c  chime-call-audio.h  chime-call-screen.c  chime-call-screen.h  chime-call-transport.c  chime-call.c  chime-call.h  chime-certs.c  chime-connection-private.h  chime-connection.c  chime-connection.h  chime-contact.c  chime-contact.h  chime-conversation.c  chime-conversation.h  chime-juggernaut.c  chime-meeting.c  chime-meeting.h  chime-object.h  chime-props.h  chime-room.c  chime-room.h  chime-signin.c  chime-websocket-connection.c  chime-websocket.c  meson.build
chimeseen/: Makefile.am  chimeseen.c
data/: meson.build  org.freedesktop.Telepathy.Client.Chime.service.in  org.gnome.Chime.Autostart.desktop  org.gnome.Chime.data.gresource.xml  org.gnome.Chime.desktop.in  org.gnome.Chime.gschema.xml  org.gnome.Chime.service.in
data/appdata/: org.gnome.Chime.appdata.xml.in
data/icons/: render-bitmaps.rb
data/resources/: application.css  connection-properties.ui  connection-viewer.ui  entry-area.ui  initial-setup-window.ui  join-room-dialog.ui  main-window.ui  room-list-row.ui  server-room-list.ui  sidebar-list-header.ui  sidebar-list-row.ui  user-details.ui  user-popover.ui
debian/: build.sh  changelog.in  control  control.in  copyright  pidgin-chime.install  rules  rules.maint
evolution-plugin/: Makefile.am  event-from-template.c
fs-app-transmitter/: Makefile.am  fs-app-stream-transmitter.c  fs-app-stream-transmitter.h  fs-app-transmitter.c  fs-app-transmitter.h
gst-chime/: Makefile.am  README  gstchime.c  gstrtpchimedepay.c  gstrtpchimedepay.h  gstrtpchimepay.c  gstrtpchimepay.h
gst-xcbimagesrc/: Makefile.am  gstxcbimagesrc.c  gstxcbimagesrc.h  xcbimageutil.c  xcbimageutil.h
pixmaps/: Makefile.am
pixmaps/16/: Makefile.am
pixmaps/22/: Makefile.am
pixmaps/24/: Makefile.am
pixmaps/32/: Makefile.am
pixmaps/48/: Makefile.am
pixmaps/scalable/: Makefile.am
po/: en_GB.po
protobuf/: auth_message.proto  data_message.proto  meson.build  ping.proto  rr.proto  rt_message.proto  screen_client_control_message.proto  video_control.proto  video_stats.proto
prpl/: attachments.c  authenticate.c  buddy.c  chat.c  chime.c  chime.h  conversations.c  dbus.c  dbus.h  markdown.c  markdown.h  meeting.c  messages.c  rooms.c
src/: accountsMonitor.js  application.c  application.h  application.js  chatView.js  chime-accounts.in  chime.c  connectionViewer.js  connections.js  connectionviewer.c  connectionviewer.h  dirs.c  dirs.h  emojiPicker.js  entryArea.js  initialSetup.js  joinDialog.js  main.c  main.js  mainWindow.js  meetinglistboxrow.c  meetinglistboxrow.h  meetinglistview.c  meetinglistview.h  meetingsview.c  meetingsview.h  meetingview.c  meetingview.h  meson.build  networksManager.js  org.gnome.Chime.src.gresource.xml.meson  pasteManager.js  roomList.js  roomManager.js  roomStack.js  serverRoomManager.js  sidebarList.js  tabCompletion.js  telepathyClient.js  userList.js  (+4 more)
src/lib/: chime-client-factory.c  chime-client-factory.h  chime-drag-helper.c  chime-drag-helper.h  chime-room.c  chime-room.h  chime-tp-autocleanup.h  chime-util.c  chime-util.h
src/resources/: chime.gresource.xml
src/resources/css/: style.css
src/resources/gtk/: menus.ui
src/resources/ui/: connectionviewer.ui  meetinglistboxrow.ui  meetinglistview.ui  meetingsview.ui  meetingview.ui  window.ui
src/tests/: meson.build  test-util.c
