# @AMZNPHOTO_PLUGIN_RULE@

amznphoto_plugin_LTLIBRARIES = amznphoto_plugin.la

amznphoto_plugin_la_CPPFLAGS = $(PURPLE_CFLAGS) $(PIDGIN_CFLAGS)

amznphoto_plugin_la_SOURCES = amznphoto_plugin.c

amznphoto_plugin_la_LDFLAGS = -module -avoid-version -no-undefined

amznphoto_plugin_la_LIBADD = $(PURPLE_LIBS) $(PIDGIN_LIBS)

