# @EVO_PLUGIN_RULE@

evomod_LTLIBRARIES = module-event-from-template.la

module_event_from_template_la_CPPFLAGS = $(EVOLUTION_CFLAGS)

module_event_from_template_la_SOURCES = event-from-template.c

module_event_from_template_la_LDFLAGS = -module -avoid-version -no-undefined

module_event_from_template_la_LIBADD = $(EVOLUTION_LIBS)

